--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,12 @@ dependencies:
   cupertino_icons: ^1.0.5
   youtube_explode_dart: ^1.12.3
   permission_handler: ^10.2.0
-  path_provider: ^2.0.12
-  image_gallery_saver: ^1.7.1
+  path_provider: ^2.0.14
   media_scanner: ^2.1.0
-  open_file: ^3.2.1
+  open_file_plus: ^3.3.0
+  url_launcher: ^6.1.10
+  image_gallery_saver: ^1.7.1
+
 
 dev_dependencies:
   flutter_test:
